# TestU01-CMake

./: CMakeLists.txt  README.md  config.cmake
CMake/: FindTestU01.cmake
include/: config.h.cmake  gdefconf.h.cmake
mylib/: chrono.c  num2.c  tcode.c
